--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "^0.25.0",
     "vue": "^3.4.26"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-slidev": "^1.0.5"
   }
 }
