--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build the slides
-        run: npm run build
+        run: npm run build -- --base k6-talk
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
